test(integration): controller unit test changed